--- a/app/templates/messList.html
+++ b/app/templates/messList.html
@@ -9,9 +9,11 @@ List of messages
 {{rowcol("md-8")}}
 <h1><i class='fa fa-list-ul'></i> Recent Messages</h1>
 
+{{lf.paginationBefore()}}
 <div id="messages">
 {{lf.getMessagesH()}}
 </div>
+{{lf.paginationAfter()}}
 
 {{col("md-4")}}
 <br><br>
