stars (working on)

--- a/app/static/message.css
+++ b/app/static/message.css
@@ -196,5 +196,18 @@ a.tag {
 
 
 /*------------------------------------------------------------------*/
+/* stars */
+
+.starred {
+    color: #070;
+}
+
+.can_star:hover {
+    color: #505;
+    background: #fdf;
+}
+
+
+/*------------------------------------------------------------------*/
 
 /*end */
