--- a/app/templates/messSource.html
+++ b/app/templates/messSource.html
@@ -10,8 +10,10 @@ View message source
 
 {{ms}}
 
-<h2><i class='fa fa-file-text-o'></i> Message Source</h2>
+<h2><i class='fa fa-star-o'></i> Starred By ({{m.numStars}})</h2>
+<p>Starred by: {{starredBy}}</p>
 
+<h2><i class='fa fa-file-text-o'></i> Message Source</h2>
 <pre>
 {{messSource}}
 </pre>
