--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -109,6 +109,10 @@ Uses SB-Admin
         <i class="fa fa-hashtag"></i>
         Popular Tags</a></li>
         
+      <li{{hpex('mostStarred')}}><a href="/mostStarred">
+        <i class="fa fa-star"></i>
+        Most-Starred</a></li>
+        
   </ul>
 </div>
 {% endblock leftbar %}
