--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -45,6 +45,9 @@ Blog for a user
 </tr>
 </table>
 
+<p><a href="/mostStarred/{{id}}" class='btn btn-default'>
+<i class='fa fa-star'></i> Most-Starred messages</a></p>
+
 {% if currentUserName()==id %}
 <p><a class='btn btn-primary' href="/messRep">
 <i class='fa fa-comment-o'></i> 
