--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -6,9 +6,11 @@ File not found page.
 {% extends "main.html" %}
 
 {% block body %}
-<h1>File Not Found</h1>
+<h1 style='color:#a22'><i class='fa fa-exclamation-triangle'></i> 
+404 - File Not Found</h1>
 
 <p>Go back to the <a href="/">front page</a>.</p>
+
 
 {% endblock body %}
 
