--- a/app/templates/mostStarred.html
+++ b/app/templates/mostStarred.html
@@ -9,7 +9,7 @@ View most-starred messages
 <div class='right-pagination'>{{pag.links}}</div>
 <h1><i class='fa fa-star'></i> Most-Starred Messages
 {%if uid %}
-for <a href='/blog/{{uid}}'>@{{uid}}</a>
+by <a href='/blog/{{uid}}'>@{{uid}}</a>
 {%endif%}
 ({{count}})</h1>
 
