--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -65,6 +65,8 @@ Uses SB-Admin
           <ul class="nav navbar-nav navbar-right navbar-user">
           
             {% if currentUserName() %}
+            <li class="dropdown user-dropdown" id="dyn_active_alerts">
+            </li>
             <li class="dropdown user-dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-user" id="myelement"></i>
