--- a/app/templates/alerts_replies.html
+++ b/app/templates/alerts_replies.html
@@ -6,8 +6,9 @@ Alerts: replies to user
 {% extends "tab_alerts.html" %}
 
 {% block body %}
-<h2><i class='fa fa-reply'></i> Replies to your posts</h2>
+<h2><i class='fa fa-reply'></i> Replies to Your Posts ({{count}})</h2>
 
+{{messages}}
 
 {% endblock body %}
 
