--- a/app/templates/alerts_stars.html
+++ b/app/templates/alerts_stars.html
@@ -6,7 +6,7 @@ Alerts: stars of user's posts
 {% extends "tab_alerts.html" %}
 
 {% block body %}
-<h2><i class='fa fa-star'></i> Stars of your posts</h2>
+<h2><i class='fa fa-star'></i> Stars of Your Posts</h2>
 
 
 {% endblock body %}
