--- a/app/templates/alerts_historic.html
+++ b/app/templates/alerts_historic.html
@@ -7,7 +7,7 @@ A user's historic alerts
 
 {% block body %}
 <div class='right-pagination'>{{pag.links}}</div>
-<h2><i class='fa fa-bell'></i> Historic Notifications ({{count}})</h2>
+<h2><i class='fa fa-bell-o'></i> Historic Notifications ({{count}})</h2>
 <p>{{pag.info}}</p>
 
 <p>These are notifications of posts replied to or starred that 
