--- a/app/templates/alerts_stars.html
+++ b/app/templates/alerts_stars.html
@@ -6,8 +6,9 @@ Alerts: stars of user's posts
 {% extends "tab_alerts.html" %}
 
 {% block body %}
-<h2><i class='fa fa-star'></i> Stars of Your Posts</h2>
+<h2><i class='fa fa-star'></i> Stars of Your Posts ({{numStars}})</h2>
 
+{{messages}}
 
 {% endblock body %}
 
