--- a/app/templates/alerts_replies.html
+++ b/app/templates/alerts_replies.html
@@ -10,7 +10,7 @@ Alerts: replies to user
 
 <form method=POST>
 <p><button class='btn btn-primary'><i class='fa fa-bell-o'></i> 
-Clear Notifications
+Clear Notifications of Replies
 </button></p>
 </form>
 
