app name and logo

--- a/app/templates/maincw.html
+++ b/app/templates/maincw.html
@@ -35,8 +35,8 @@ main from catwiki
         {%block topbar %}
       <div class="container-liquid">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand"><!--i class='icon-icon_e600'></i-->
-          <i class='icon-icon_e600'></i> <b>CatWiki</b></a>
+          <a href="/" class="navbar-brand">{{APP_LOGO}}
+            {{APP_TITLE}}</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
