--- a/app/templates/front.html
+++ b/app/templates/front.html
@@ -3,10 +3,10 @@
 
 Front page
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
-<div style="float: right; margin-right:140px; 
+<div style="float: right; margin-top:40px; margin-right:140px; 
             border: 2px solid #888; 
             padding: 10px">
     <img src="/static/fediverse_logo_200px.png"><br>
