moved more pages over

--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -4,7 +4,7 @@
 Permission denied
 #}
 
-{% extends 'main.html' %}
+{% extends 'maincw.html' %}
 {% block body %}
 <h1 style='color:#a22'><i class='fa fa-ban'></i> Permission Denied</h1>
 
