--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,7 +3,7 @@
 
 File not found page.
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1 style='color:#a22'><i class='fa fa-exclamation-triangle'></i> 
