--- a/app/templates/context.html
+++ b/app/templates/context.html
@@ -3,7 +3,7 @@
 
 Context (i.e. ancestors) of a message
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1><i class='fa fa-list-ul'></i> Context of {{m.id()}}</h1>
