--- a/app/templates/followingMess.html
+++ b/app/templates/followingMess.html
@@ -3,7 +3,7 @@
 
 Messages by people a user follows
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block extrahead %}
 <link rel="alternate" type="application/rss+xml"
