--- a/app/templates/tag.html
+++ b/app/templates/tag.html
@@ -3,7 +3,7 @@
 
 Messages containing a particular tag
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block extrahead %}
 <link rel="alternate" type="application/rss+xml"
