--- a/app/templates/createAccount.html
+++ b/app/templates/createAccount.html
@@ -3,7 +3,7 @@
 
 allow the user toi create a new account
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1><i class='fa fa-user-plus'></i> Create New Account</h1>
