--- a/app/templates/messSource.html
+++ b/app/templates/messSource.html
@@ -3,7 +3,7 @@
 
 View message source
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1><i class='fa fa-comment-o'></i> Source for Message {{m.id()}}</h1>
