--- a/app/templates/listFollowers.html
+++ b/app/templates/listFollowers.html
@@ -3,7 +3,7 @@
 
 List people who follow a user
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <div class='right-pagination'>{{pag.links}}</div>
