--- a/app/templates/mess.html
+++ b/app/templates/mess.html
@@ -3,7 +3,7 @@
 
 View a single message
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1><i class='fa fa-comment-o'></i> View Message: {{m.id()}}</h1>
