--- a/app/templates/messSource.html
+++ b/app/templates/messSource.html
@@ -14,7 +14,7 @@ View message source
 <p>Starred by: {{starredBy}}</p>
 
 <h2><i class='fa fa-file-text-o'></i> Message Source</h2>
-<pre>
+<pre class='message_source'>
 {{messSource}}
 </pre>
 
