--- a/app/templates/mostStarred.html
+++ b/app/templates/mostStarred.html
@@ -3,7 +3,7 @@
 
 View most-starred messages
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <div class='right-pagination'>{{pag.links}}</div>
