--- a/app/static/message.css
+++ b/app/static/message.css
@@ -116,16 +116,23 @@ div.toc > ul > li > ul {
     margin-top: 11px;    
 }  
 
-.mess pre {
+.mess pre, .message_source {
     line-height: 16px;
     padding: 2px 6px 3px 5px;
-    margin-left: 15px;
     margin-right: 15px;
     border: 2px solid #f79;
     white-space: pre-wrap;
     word-break: keep-all;
     background: #fff;
     color: #000;
+}  
+.message_source {  
+    margin-top: 15px;
+    border: 2px solid #f9b;
+}     
+.mess pre {    
+    margin-left: 15px;
+    border: 2px solid #f79;
 }    
 
 code {
@@ -207,6 +214,14 @@ a.tag {
     color: #505;
     background: #fdf;
 }
+
+
+/*------------------------------------------------------------------*/
+/* message source */
+
+.message_source {
+    
+}    
 
 
 /*------------------------------------------------------------------*/
