--- a/app/templates/popularTags.html
+++ b/app/templates/popularTags.html
@@ -3,7 +3,7 @@
 
 Tags, by popularity
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <div class='right-pagination'>{{pag.links}}</div>
