--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 
 Allow the user to log in
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1><i class='fa fa-sign-in'></i> Log In</h1>
