--- a/app/templates/maincw.html
+++ b/app/templates/maincw.html
@@ -111,6 +111,8 @@ main from catwiki
           Most-Starred</a> &nbsp;
       </p>
       {% endblock topnav %}   
+      {% block bodytop %}  
+      {% endblock bodytop %}
       {% block body %}
       <p>This is the body of the page.</p>
       {% endblock body %}</div>
