--- a/app/templates/tab_alerts.html
+++ b/app/templates/tab_alerts.html
@@ -3,7 +3,7 @@
 
 Tabbed pages for alerts/notifications
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block bodytop %}
 <h1><i class="fa fa-bell-o"></i> Notifications</h1>
