all pages moved over to CW-like layout

--- a/app/templates/thread.html
+++ b/app/templates/thread.html
@@ -3,7 +3,7 @@
 
 Descendents of a message
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <h1><i class='fa fa-list-ul'></i> Thread from {{m.id()}}</h1>
