--- a/app/templates/userList.html
+++ b/app/templates/userList.html
@@ -3,7 +3,7 @@
 
 List of all users
 #}
-{% extends "main.html" %}
+{% extends "maincw.html" %}
 
 {% block body %}
 <div class='right-pagination'>{{pag.links}}</div>
