--- a/app/templates/context.html
+++ b/app/templates/context.html
@@ -6,7 +6,7 @@ Context (i.e. ancestors) of a message
 {% extends "maincw.html" %}
 
 {% block body %}
-<h1><i class='fa fa-list-ul'></i> Context of {{m.id()}}</h1>
+<h1><i class='fa fa-arrow-down'></i> Context of {{m.id()}}</h1>
 
 {{msh}}
 
