--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -50,10 +50,9 @@ Blog for a user
 &nbsp;
 <a href="/wiki/{{id}}/" class='btn btn-default'>
     <i class='fa fa-file-text-o'></i> Wiki</a>
+&nbsp;
 <a href="/wiki/{{id}}/home" class='btn btn-default'>
     <i class='fa fa-home'></i> Wiki Home Page</a>
-
-
 </p>
 
 {% if currentUserName()==id %}
