--- a/app/templates/wikiPage.html
+++ b/app/templates/wikiPage.html
@@ -7,6 +7,10 @@ A page in a wiki
 
 
 {% block body %}
+<div class="navigation">
+{{nav}}
+</div>
+
 <h1><i class='fa fa-file-text-o'></i> {{filename}}</h1>
 
 {% if exists %}
