RSS input stuff

--- a/app/templates/maincw.html
+++ b/app/templates/maincw.html
@@ -109,6 +109,9 @@ main from catwiki
         <a class='btn btn-default' href="/mostStarred">
           <i class="fa fa-star"></i>
           Most-Starred</a> &nbsp;
+        <a class='btn btn-default' href="/rssin">
+          <i class="fa fa-rss"></i>
+          RSS In (temp)</a> &nbsp;
       </p>
       {% endblock topnav %}   
       {% block bodytop %}  
