worked on wiki pages

--- a/app/templates/wikiPage.html
+++ b/app/templates/wikiPage.html
@@ -8,7 +8,7 @@ A page in a wiki
 
 {% block body %}
 <div class="navigation">
-{{nav}}
+...navigation goes here...
 </div>
 
 <h1><i class='fa fa-file-text-o'></i> {{filename}}</h1>
