editting wiki pages

--- a/app/static/app.css
+++ b/app/static/app.css
@@ -422,54 +422,29 @@ a.navbar-brand {
 
 
 /*------------------------------------------------------------------*/
-/* raspberry icon */
+/* navigation bar */
 
-@font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9axk29');
-  src:  url('fonts/icomoon.eot?9axk29#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9axk29') format('truetype'),
-    url('fonts/icomoon.woff?9axk29') format('woff'),
-    url('fonts/icomoon.svg?9axk29#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
+.navigation { /* the navigation bar */
+    font-weight: bold;    
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1; 
-  font-size:110%; position:relative; top:0.18em;
-  
+.nav-instance { /* the MeowCat instance */
+    color: #606;
+}   
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+.nav-user { /* the user on this instance */
+    color: #060;
+} 
 
-.icon-noun_752516_cc:before {
-  content: "\e901";
-}
-.icon-noun_71141_cc:before {
-  content: "\e902";
-}
-.icon-noun_71140_cc:before {
-  content: "\e903";
-}
-.icon-noun_71181_cc:before {
-  content: "\e904";
-}
-.icon-noun_162884_cc:before {
-  content: "\e905";
-}
-.icon-noun_1596749_cc:before {
-  content: "\e900";
-}
+.nav-wiki { /* the user's wiki */
+    color: #640;
+}   
+
+.nav-message { /* a message or blog */
+    color: #026;
+}   
+
+
 
 /*------------------------------------------------------------------*/
 
