--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -49,7 +49,7 @@ Blog for a user
 <i class='fa fa-star'></i> Most-Starred messages</a>
 &nbsp;
 <a href="/wiki/{{id}}/" class='btn btn-default'>
-    <i class='fa fa-file-text-o'></i> Wiki</a>
+    <i class='fa fa-database'></i> Wiki</a>
 &nbsp;
 <a href="/wiki/{{id}}/home" class='btn btn-default'>
     <i class='fa fa-home'></i> Wiki Home Page</a>
