--- a/app/templates/wikiEdit.html
+++ b/app/templates/wikiEdit.html
@@ -46,7 +46,9 @@ Edit a page in a wiki
 <h2>Editing Commands</h2>
 
 <p><button class='btn btn-success' onclick="submit()">
-<i class='fa fa-save'></i> Save changes</button></p>
+<i class='fa fa-save'></i> Save changes</button>
+&nbsp; 
+</p>
 
 <p><a class='btn btn-default' href="">
 <i class='fa fa-undo'></i>
