--- a/app/static/message.css
+++ b/app/static/message.css
@@ -120,7 +120,7 @@ div.toc > ul > li > ul {
     line-height: 16px;
     padding: 2px 6px 3px 5px;
     margin-right: 15px;
-    border: 2px solid #f79;
+    border: 2px solid #ccc;
     white-space: pre-wrap;
     word-break: keep-all;
     background: #fff;
@@ -132,7 +132,9 @@ div.toc > ul > li > ul {
 }     
 .mess pre {    
     margin-left: 15px;
-    border: 2px solid #f79;
+    border: 2px solid #ccc;
+    border-radius: 0;
+    background: #f4f4f4;
 }    
 
 code {
