--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -48,7 +48,7 @@ Blog for a user
 <p><a href="/mostStarred/{{id}}" class='btn btn-default'>
 <i class='fa fa-star'></i> Most-Starred messages</a>
 &nbsp;
-<a href="/wiki/{{id}}/" class='btn btn-default'>
+<a href="/wikiIndex/{{id}}" class='btn btn-default'>
     <i class='fa fa-database'></i> Wiki</a>
 &nbsp;
 <a href="/wiki/{{id}}/home" class='btn btn-default'>
