--- a/app/templates/wikiEdit.html
+++ b/app/templates/wikiEdit.html
@@ -50,7 +50,7 @@ Edit a page in a wiki
 &nbsp; 
 </p>
 
-<p><a class='btn btn-default' href="">
+<p><a class='btn btn-default' href="/wiki/{{userName}}/{{pn}}">
 <i class='fa fa-undo'></i>
 Cancel changes</a></p>
 
