added wikiEdit controls

--- a/app/templates/maincw.html
+++ b/app/templates/maincw.html
@@ -121,11 +121,12 @@ main from catwiki
 </div>
 {% endblock contents %}
 
-<script src="/static/sb-admin/js/jquery-1.10.2.js"></script>
+<script src="/static/jquery-3.1.1.min.js"></script>
 <script src="/static/sb-admin/js/bootstrap.js"></script>
 <script src="/static/bootbox.min.js"></script>
 <script src="/static/jquery-ui-1.11.4/jquery-ui.min.js"></script>
 <script src="/static/jquery-ui-timepicker-addon.js"></script>
+<script src="/static/jquery.selection.js"></script>
 <script src="/static/js.cookie.js"></script>
 <script src="/static/bozen.js"></script>
 <script src="/static/jsfunctions.js"></script>
