--- a/app/templates/maincw.html
+++ b/app/templates/maincw.html
@@ -8,6 +8,8 @@ main from catwiki
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>{% block title %}{{APP_TITLE}}{% endblock %}</title>
+    
+<link rel="icon" type="image/png" href="/static/cat_icon_32x32.png" />
 
 <link href="/static/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" 
@@ -22,8 +24,6 @@ main from catwiki
 <link rel="stylesheet" href="/static/pygments.css">
 <link rel="stylesheet" href="/static/tango.css">
 
-<link rel="shortcut icon" type="image/png" 
-      href="/static/cat_icon_32x32.png">
     {% block extrahead %}{% endblock extrahead %}
 </head>
 
